# amr_ws

./: .gitignore  CLAUDE.md  README.md
firmware/: .cproject  .gitignore  .project  STM32F446RETX_FLASH.ld  STM32F446RETX_RAM.ld  amr_stm32.ioc
firmware/Core/Inc/: ackermann.h  jetson_comm.h  motor_driver.h  servo_buslinker.h
firmware/Core/Src/: ackermann.c  jetson_comm.c  main.c  motor_driver.c  servo_buslinker.c  usart.c
src/amr_bringup/: CMakeLists.txt  README.md  package.xml
src/amr_bringup/config/: amr_rviz.rviz
src/amr_bringup/launch/: amr_bringup.launch.py  rviz.launch.py
src/amr_control/: CMakeLists.txt  README.md  package.xml
src/amr_control/include/amr_control/: ackermann_kinematics.hpp
src/amr_control/launch/: control.launch.py
src/amr_control/src/: ackermann_controller_node.cpp
src/amr_description/: CMakeLists.txt  README.md  package.xml
src/amr_description/config/: controller_gz_sim.yaml  gz_bridge.yaml
src/amr_description/launch/: description.launch.py  gazebo.launch.py
src/amr_description/scripts/: teleop_relay.py
src/amr_description/urdf/: amr.urdf.xacro  amr_core.xacro  camera.xacro  inertial_macros.xacro  lidar.xacro  ros2_control.xacro
src/amr_hardware/: CMakeLists.txt  README.md  package.xml
src/amr_hardware/include/amr_hardware/: serial_driver.hpp
src/amr_hardware/launch/: hardware.launch.py
src/amr_hardware/src/: serial_driver_node.cpp  stm32_comm.cpp
src/amr_navigation/: CMakeLists.txt  README.md  package.xml
src/amr_navigation/config/: nav2_params.yaml
src/amr_navigation/launch/: navigation.launch.py
src/amr_perception/: README.md  package.xml  setup.cfg  setup.py
src/amr_perception/amr_perception/: lane_detection_node.py  lidar_filter_node.py
src/amr_perception/launch/: perception.launch.py
src/amr_slam/: CMakeLists.txt  README.md  package.xml
src/amr_slam/config/: slam_toolbox_params.yaml
src/amr_slam/launch/: slam.launch.py
