<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup</name>
  <version>0.1.0</version>
  <description>Launch files và config tổng hợp cho robot AMR Ackermann</description>
  <maintainer email="tnguyenmanht@gmail.com">tnguyenmanht</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_description</exec_depend>
  <exec_depend>amr_hardware</exec_depend>
  <exec_depend>amr_control</exec_depend>
  <exec_depend>amr_slam</exec_depend>
  <exec_depend>amr_navigation</exec_depend>
  <exec_depend>amr_perception</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
