<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_slam</name>
  <version>0.1.0</version>
  <description>Config và launch cho SLAM Toolbox — vẽ bản đồ bằng RPLidar A1M8</description>
  <maintainer email="tnguyenmanht@gmail.com">tnguyenmanht</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
